# interpreter

./: CMakeLists.txt  README.md  grammar.bnf
src/: Color.hpp  Context.hpp  Parser.hpp  SyntaxError.hpp  main.cpp
src/AST/: AddExpression.hpp  AssignmentExpression.hpp  BinaryExpression.hpp  Constant.hpp  DivideExpression.hpp  ExponentialExpression.hpp  Expression.hpp  Identifier.hpp  MinusExpression.hpp  MultiplyExpression.hpp  PlusExpression.hpp  SubtractExpression.hpp  UnaryExpression.hpp
test/: InterpreterTest.cpp  Parser.cpp
